2000-06-26  Andraz Tori <andraz.tori1@guest.arnes.si>

        * allpo.pl: Made script that extracts translations from 
          .desktop files into .po and stores them back later.
          That makes translating much more efficent - all 
          messages are in one place and you can use .po tools
          to manage them...

2000-05-23  Kenneth Christiansen <kenneth@gnu.org>

        * update.pl: How honors POTFILES.ignore's. Now ready
          as a replacement for update.sh. Please translators
          redistribute! 

2000-05-23  Kenneth Christiansen <kenneth@gnu.org>

        * desk.pl: Did so it did not show ./ before the
          file names. Plus made the structure more bulletproof

2000-05-23  Kenneth Christiansen <kenneth@gnu.org>

        * update.pl: updte.sh ported to perl...pretty close
          to perfect...translators please test test test!!

2000-05-23  Kenneth Christiansen <kenneth@gnu.org>

        * desk.pl: Ported some of the shell command inclucion
          to perl. This fixes the problems when you have onle
          one .desktop file in your dir (+ subdirs)

          Is now also more extentable, and will soon be 100%
          pure perl. ie. no shell commands! This will be 
          followed up by a nice touch, so be ware translators!

2000-05-22  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Small fixes. Found a bug that I need to fix
          tomorrow. Now I am soon ready to add status also.

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Cool, now it's almost pure perl...not all that
          shell including :)

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Cool, now everything in this script is working
          like it is supposed to!! Even incooperated some Kmaraas
          suggestions

2000-05-21  Kenneth Christiansen <kenneth@gnome.org>

        * desk.pl: Great updates :) Now takes --help --version
          checks for wrong options, et al.
