@@ -1,23 +1,28 @@
 #!/usr/bin/perl
 #
-#    allpo is a program that loads all translations from .desktop and
-#    .directory files into .po file format and stores them back.
-#    that makes translating .desktop files a lot faster and cleaner...
+#    Allpo is a program that loads all translations from .desktop and
+#    .directory files into .po file format and later stores them back.
+#    That makes translating .desktop files much easier and faster...
 #
 #    Probably there are still bugs in the code and some parts could
 #    be written much more efficenlty, but for now it is enough that
-#    it works for me
-#    feel free to send comments to andraz.tori1@guest.arnes.si
-#    allpo (c) Andraz Tori 2000
-
-
+#    it works for me.
+#    Feel free to send any comments to andraz.tori1@guest.arnes.si
+#
+#
+#
+#    Version 0.2: 
+#	- added escaping of doublequotes
+#	- disabled Slovenian as default language
+#	- cleaned up the code a bit
+#       - on store each updated file is only printed once
 
 
 	$action=$ARGV[0];
 	$path=$ARGV[1];
 	$lang=$ARGV[2];
-	if (!$lang) {$lang="sl";};	
 	$tmpfile="/tmp/tmp.po";
+	$lastupdate="---";
 
 	%vse,%trans,%is;
 	$c="\x23";
@@ -36,10 +41,7 @@ sub s_flushout {
 			my $data=$2;
 			if ($name eq $s_name) {
 				$applied=1;
-				if ($t ne $data) {
-					$change=1;
-#					if ($change) {print "a $t\n";};
-				};
+				if ($t ne $data) {	$change=1;	};
 				$lines[$ln]=$s_name . "[$lang]=".$t."\n";
 			}
 		}
@@ -47,38 +49,31 @@ sub s_flushout {
 	}
 	while ($ln=shift (@lines)) {
 		print OUT $ln;
-
-
-		if ($t) {
-			if (!$applied) {
-				if ($ln=~m/^$s_name\=(.*)/) {
-
-					$change=1;
+		if (($t)&&(!$applied)) {
+			if ($ln=~m/^$s_name\=(.*)/) {
+				$change=1;
 				print OUT $s_name . "[$lang]=".$t."\n";
-				}
 			}
 		}
 
 	}
-#	if ($change) {print "a $t\n";}	
-
 	return ($change);
-
-
 }
 
 sub s_fast_flushout {
-	while ($ln=shift (@lines)) {
-		print OUT $ln;
-	}
-
+	#while ($ln=shift (@lines)) {
+	#	print OUT $ln;
+	#}
+	print OUT @lines;
+	@lines=();
 	
 }
 
 sub store_trans {
-	my $change=0;
 	($filename,$s_section,$s_name,$o,$t)=@_;
+	my $change=0;
 	my $section,$newsection;
+
 	open (OUT,">$tmpfile");
 	open (FILE,"<$filename");
 
@@ -96,29 +91,31 @@ sub store_trans {
 		push (@lines,$line);
 	};
 
-			if ($section eq $s_section) {
-				$change |= &s_flushout($s_name,$o,$t);	
-			} else	{
-				&s_fast_flushout();	
-			}
+	if ($section eq $s_section) {
+		$change |= &s_flushout($s_name,$o,$t);	
+	} else	{
+		&s_fast_flushout();	
+	}
 
 	close (FILE);
 	close (OUT);
 	if ($change) {
-		print "Upd: $filename\n";
+		if ($lastupdate ne $filename) {
+			$lastupdate=$filename;
+			print "U: $filename\n";
+		}
 		system ("cp $tmpfile $filename"); 
-#		system ("cat $tmpfile");
 	}
 }
 
 
 
 
-#	print "$c _FILE $filename\n$c _SECT $section\n$c _NAME $name\nmsgid \"$o\"\nmsgstr \"$t\"\n\n";
-
-
 sub l_print {
 	($filename,$section,$name,$o,$t)=@_;
+	$o=~s/"/\\"/g;
+	$t=~s/"/\\"/g;
+
 	print "$c _FILE $filename\n$c _SECT $section\n$c _NAME $name\nmsgid \"$o\"\nmsgstr \"$t\"\n\n";
 }
 
@@ -173,12 +170,14 @@ sub load_f {
 }
 
 
-if ($action eq "load") {
+if (($action eq "load")&&($lang)) {
 
-	my $a;
 	my $filename;	
 
-	print "\n\n$c Automaticly generated by allpo\n";
+	print "\n\n$c This file was automatically generated by allpo\n";
+	print "$c When you are done, commit changes with: './allpo.pl store file_name'\n";
+
+
 	print "$c _LANG $lang\n\n";
 
 	open(TMPFILE, "find $path -print|");
@@ -197,7 +196,7 @@ if ($action eq "load") {
 		chop $line;
 		if ($line=~m/^$c _LANG (.*)$/) {
 			$lang=$1;
-			print "Language set to $lang\n";
+			print "Updating translations of $lang language\n";
 		} 
 
 		if ($line=~m/^$c _FILE (.*)$/) {
@@ -214,9 +213,14 @@ if ($action eq "load") {
 
 		if ($line=~m/^msgid \"(.*)\"$/) {
 			$msgid=$1;
+			$msgid=~s/\\"/"/g;
+
+			
 		} 
 		if ($line=~m/^msgstr \"(.*)\"$/) {
 			$msgstr=$1;
+			$msgstr=~s/\\"/"/g;
+
 			store_trans($filename,$section,$name,$msgid,$msgstr);
 		} 
 
@@ -226,19 +230,20 @@ if ($action eq "load") {
 
 } else {
 
-print "allpo, automatically loads translations from .desktop files and
-stores them back
+print "
+allpo automatically loads translations from .desktop files and stores them 
+back later
+
+allpo version 0.2
 
 Usage:
 allpo load /directory lang
 allpo store file.po
 
-allpo (c) Andraz Tori 2000
+allpo (c) Andraz Tori 2000 
 "; 
 
 }
-
-
 
 
 
