@@ -1,3 +1,10 @@
+2000-07-07  Andraz Tori <andraz.tori1@guest.arnes.si>
+
+        * allpo.pl: added escaping of doublequotes, 
+          disabled Slovenian as default language,
+          cleaned up the code and information about
+          updated files is now correctly printed just once
+
 2000-06-26  Andraz Tori <andraz.tori1@guest.arnes.si>
 
         * allpo.pl: Made script that extracts translations from 
